--- a/code/m-view/second-head-shop/index.html
+++ b/code/m-view/second-head-shop/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <!-- 引入样式 -->
+	<link rel="stylesheet" href="https://unpkg.com/mint-ui/lib/style.css">
     <title>second-head-shop</title>
   </head>
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+	<!-- 引入组件库 -->
+	<script src="https://unpkg.com/mint-ui/lib/index.js"></script>
   </body>
 </html>
